2015-01-02  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	* plugins/subtitleformats/subtitleeditorproject/subtitleeditorproject.cc:
	Fix bug #22508 : Use (at least optionaly) relative paths in subtitle editor xml files (and optionally ass and ssa?).

2015-01-01  kitone  <kitone@gna.org>

	* plugins/actions/plaintext/plaintext.cc:
	Fix bug #22550 : Default saving mode defaults to plain text after importing a .txt script

2015-01-01  kitone  <kitone@gna.org>

	* src/gui/textviewcell.cc:
	* src/gui/textviewcell.h:
	* src/subtitleview.cc:
	Fix bug #22857, bug #23018 patch from Philip Rinn and oi_wtf.

2014-08-31  kitone  <kitone@gna.org>

	* plugins/actions/findandreplace/findandreplace.cc:
	Fix segfault and refactoring search function.

2014-08-31  kitone  <kitone@gna.org>

	* plugins/actions/findandreplace/findandreplace.cc:
	Fix bug #22494 : Find and replace sohuld focus the "Pattern" filed when launche.

2014-08-31  kitone  <kitone@gna.org>

	* plugins/actions/viewmanager/dialog-view-manager.ui:
	Fix bug #22490 : GTK3: view manager is useless.

2014-08-15  kitone  <kitone@gna.org>

	* src/gui/application.cc:
	Fix show/hide of player/waveform after porting to gtk3.

2014-08-15  kitone  <kitone@gna.org>

	* src/gui/application.cc:
	* src/gui/application.h:
	Fix bug #22471 : Drag and drop of keyframe and waveform files.

2014-08-15  kitone  <kitone@gna.org>

	* src/we/waveformeditor.cc:
	* src/we/waveformeditor.h:
	Only set sensitive to false on child.

2014-08-15  kitone  <kitone@gna.org>

	* configure.ac:
	Fix gstreamer level test on old version.

2014-08-14	kitone	<kitone@gna.org>

	*  plugins/actions/keyframesmanagement/keyframesmanagement.cc
	Fix bug #22472 : Recent keyfroms files.

2014-08-12	kitone	<kitone@gna.org>

	*  plugins/actions/keyframesmanagement/keyframesgeneratorusingframe.cc
	Port the keyframes generator using frame to gstreamer 1.0.

2014-08-12	kitone	<kitone@gna.org>
