@@ -1,3 +1,8 @@
+2015-01-03  kitone  <kitone@gna.org>
+
+	* plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.ui:
+	Fix bug #22492 : Crash when trying to open external player preferences.
+
 2015-01-02  kitone  <kitone@gna.org>
 
 	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
